3 files modified, 1 added

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,4 +7,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
   <p>
   Esta página está creada por Hugo Cárdenas para crear una pagina con todas las Actividades extraescolares de Escuela Ideo.
   </p>
+  <p>
+  Hecho por Hugo Cárdenas.
+  </p>
   </BaseLayout>
