--- a/src/pages/activities.astro
+++ b/src/pages/activities.astro
@@ -6,7 +6,9 @@ import BaseLayout from '../layouts/BaseLayout.astro'
 <h1>Actividades Extraescolares</h1>
 <div class="list-of-activities">
  <div class="activities-preview">
+ <a href="/baloncesto">
    <div class="Activities-picture"></div>
+   </a>
    <div class="description">
    Baloncesto
    </div>
