--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import MenuLayout from './MenuLayout.astro'
 import FootLayout from './FootLayout.astro'
+import Logo from '../assetslogo.svg'
 // src/layouts/BaseLayout.astro
 const {title} = Astro.props;
 ---
@@ -18,7 +19,7 @@ const {title} = Astro.props;
         <div id="logo">
           <!-- Aquí irá el logo -->
           <a href="/home">
-            <img class="logo" src="/assets/logo.png" />
+            <img class="logo" src={logo} />
           </a>
         </div>
         <MenuLayout></MenuLayout>
