--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import MenuLayout from './MenuLayout.astro'
 import FootLayout from './FootLayout.astro'
-import Logo from '../assetslogo.svg'
+import logo from '../assets/logo.svg'
 // src/layouts/BaseLayout.astro
 const {title} = Astro.props;
 ---
