--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -133,7 +133,7 @@ img.logo:hover {
   border: 1px solid #888;
   padding: 0.5em;
 }
-.activities-preview .activities-picture {
+.activities-picture {
   width: 100%;
   height: 100px;
   background-color: grey;
